/sensors & /sensorMesures & /openapi endpoints + openApi stuff

--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
             <li>Voila !!(maybe...tm)</li>
           </ul>
         </p>
+        <h2>But it's for linux and I run windows (useless nerd !)</h2>
+        <p>
+          Well I dunno... use <a href="https://learn.microsoft.com/en-us/windows/wsl/install" target="_blank">WSL</a> or something...<br/>
+          Note that PIO is a python tool, so it should work on windows too, but I did not try it. And you really do not have to use my utils scripts (that are written in bash), just use PIO directly (i use the vscode extension while working on my stations).
+        </p>
+        <h2>What about MacOS ?</h2>
+        <p>Look pal, I ain't responsible for your poor life choices, now if you care to donate a mac (those M2 pro minis look sweeeet) I promise to add support, how's that ?</p>
         <h2>Can you integrate with other IoT stacks ?</h2>
         <p>
           Huuuum, ...., I did not even try ^^'. <br />
