--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
               <div class="text-center">Click on the plugin you want to add :</div>
               <div class="col">
                 <ul id="plugins-list">
-                  <li><a href="plugins/custom-i2c-pins.js" onclick="addScript(this.getAttribute('href')); return false;" data-bs-dismiss="modal">Custom I2C pins</a></li>
-                  <li><a href="plugins/mini-hub-generator.js" onclick="addScript(this.getAttribute('href')); return false;" data-bs-dismiss="modal">Minihub</a> WiP(tm)</li>
+                  <li><a href="plugins/custom-i2c-pins.js" data-bs-dismiss="modal">Custom I2C pins</a></li>
+                  <li><a href="plugins/IR-tansmitter.js" data-bs-dismiss="modal">IR Remote</a> (custom endpoint and 21,24,44 buttons remote)</li>
+                  <li><a href="plugins/mini-hub-generator.js" data-bs-dismiss="modal">Minihub</a> WiP(tm)</li>
                 </ul>
               </div>
             </div>
@@ -70,7 +71,7 @@
       </div>
     </div>
     <div class="container">
-      <h1 ondblclick="new bootstrap.Modal('#pluginModal', {}).show()">StationIO</h1>
+      <h1>StationIO</h1>
       <div class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <nav class="nav nav-tabs">
           <a
@@ -1271,9 +1272,15 @@ TInfo tinfo;
         document.getElementById("main-cpp-output").style.height =
           window.innerHeight - 100 + "px";
         
-        // document.getElementsByTagName("h1")[0].addEventListener('dblclick', (event) => {
-        //   new bootstrap.Modal('#pluginModal', {}).show()
-        // });
+        document.getElementsByTagName("h1")[1].addEventListener('dblclick', (event) => {
+          new bootstrap.Modal('#pluginModal', {}).show()
+        });
+        document.querySelectorAll("#plugins-list>li>a").forEach(el => {
+          el.addEventListener('click', (event) => {
+            event.preventDefault();
+            addScript(event.target.dataset.plugin);
+          });
+        })
       });
       window.addEventListener("resize", () => {
         document.getElementById("main-cpp-output").style.height =
