--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@ TInfo tinfo;
         document.querySelectorAll("#plugins-list>li>a").forEach(el => {
           el.addEventListener('click', (event) => {
             event.preventDefault();
-            addScript(event.target.dataset.plugin);
+            addScript(event.target.getAttribute('href'));
           });
         })
       });
